app-test/testdata/typesystem/neg/type-comparison-list-type-with-any-type/check/cmp1.check
testdata/typesystem/neg/type-comparison-list-type-with-any-type/src/cmp.cal:4:21: error: = is not supported with List(type:uint(size=2), size=3) and bool.
            OUT <-- [1, 2, 3] = false; // error
                    ^^^^^^^^^^^^^^^^^